--- a/SCFD-2018/index.html
+++ b/SCFD-2018/index.html
@@ -58,7 +58,9 @@
             </div>
             <!-- /navbar header -->
 
-            <!-- Navigation -->
+            <!-- Navegação -->
+            <!-- Matheus: Edite os titulos do navbar para português 
+            Ficando: Inicio, Sobre, Horarios, palestrantes, contato, local, o resto pode apagar-->
             <nav id="nav">
                 <ul class="main-nav nav navbar-nav navbar-right">
                     <li><a href="#home">Home</a></li>
