alteração no navbar
Tradução do menu

--- a/SCFD-2018/index.html
+++ b/SCFD-2018/index.html
@@ -63,12 +63,12 @@
             Ficando: Inicio, Sobre, Horarios, palestrantes, contato, local, o resto pode apagar-->
             <nav id="nav">
                 <ul class="main-nav nav navbar-nav navbar-right">
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#schedule">Schedule</a></li>
-                    <li><a href="#speakers">Speakers</a></li>
-                    <li><a href="#sponsors">Sponsors</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="#home">Ínicio</a></li>
+                    <li><a href="#about">Evento</a></li>
+                    <li><a href="#schedule">Horários</a></li>
+                    <li><a href="#speakers">Palestrantes</a></li>
+                    <li><a href="#sponsors">Patrocínios</a></li>
+                    <li><a href="#contact">Local</a></li>
                     <li><a href="blog.html">Blog</a></li>
                 </ul>
             </nav>
