--- a/SCFD-2018/index.html
+++ b/SCFD-2018/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
-    <title>Event HTML Template</title>
+    <title>II Semana de Ciência, Fé e Desenvolvimento Social</title>
 
     <!-- Google font -->
     <link href="https://fonts.googleapis.com/css?family=Poppins:400,700,900" rel="stylesheet">
@@ -69,7 +69,7 @@
                     <li><a href="#speakers">Palestrantes</a></li>
                     <li><a href="#sponsors">Patrocínios</a></li>
                     <li><a href="#contact">Local</a></li>
-                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="blog.html">Edição anterior</a></li>
                 </ul>
             </nav>
             <!-- /Navigation -->
@@ -93,9 +93,8 @@
                     <!-- home content -->
                     <div class="col-md-8 col-md-offset-2">
                         <div class="home-content">
-                            <h1>Lorem ipsum dolor sit amet</h1>
-                            <h4 class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                                tempor incididunt ut labore et dolore magna aliqua.</h4>
+                            <h1>II Semana de Ciência, Fé e Desenvolvimento Social</h1>
+                            <h4 class="lead">Em andamento...</h4>
                             <a href="#" class="main-btn">Buy Ticket</a>
                         </div>
                     </div>
@@ -117,62 +116,22 @@
             <div class="row">
                 <!-- section title -->
                 <div class="section-title">
-                    <h3 class="title"><span>About</span> <span style="color: #192880;">Event</span></h3>
+                    <h3 class="title"><span>O</span> <span style="color: #192880;">Evento</span></h3>
                 </div>
                 <!-- /section title -->
 
-                <div class="col-md-8 col-md-offset-2 text-center">
+                <div class="col-md-10 col-md-offset-1 text-center">
                     <!-- about content -->
                     <div class="about-content">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
-                            ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                            ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-                            dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
-                            anim id est laborum.</p>
+                        <p>Quando as ciências naturais ainda eram chamadas de filosofia natural já se discutia a sinuosa relação entre fé, ciência e suas esferas. Debates que remontam ao século XIII já tratavam da interação entre os conhecimentos filosóficos e teológicos.<br/>
+
+                        Muitos cientistas possuidores de alguma fé, como Galileu Galilei, Michael Faraday, Isaac Newton, entre outros, se posicionaram a esse respeito. Muitos filósofos e teólogos escreveram tratados sobre o tema. Nesse contexto, a I Semana de Ciência, Fé e Desenvolvimento Social possui o objetivo de ser uma plataforma para tais reflexões a fim de promover o diálogo harmonioso do que seria esfera da fé e esfera da ciência. Assim sendo, justifica-se o tema: "Desmistificando a Incompatibilidade".
+
+                        Pretende-se, também, promover a interdisciplinarização de conhecimentos, pensando no fortalecimento da cultura regional, construção de metodologias participativas, desenvolvimento de conhecimentos científicos e aplicação de tecnologias sociais, fomentando assim, processos de adequação e geração de sustentabilidade produtiva..</p>
                     </div>
                     <!-- /about content -->
 
-                    <!-- Numbers -->
-                    <div id="numbers">
-                        <!-- row -->
-                        <div class="row">
-                            <!-- number -->
-                            <div class="col-md-3 col-sm-3 col-xs-6">
-                                <div class="number">
-                                    <h3><span class="counter" data-from="0" data-to="900" data-speed="1500">0</span>+</h3>
-                                    <p>Hours</p>
-                                </div>
-                            </div>
-                            <!-- /number -->
-
-                            <!-- number -->
-                            <div class="col-md-3 col-sm-3 col-xs-6">
-                                <div class="number">
-                                    <h3><span class="counter" data-from="0" data-to="750" data-speed="1500">0</span>+</h3>
-                                    <p>Venues</p>
-                                </div>
-                            </div>
-                            <!-- /number -->
-
-                            <!-- number -->
-                            <div class="col-md-3 col-sm-3 col-xs-6">
-                                <div class="number">
-                                    <h3><span class="counter" data-from="0" data-to="50" data-speed="1500">0</span>+</h3>
-                                    <p>Country</p>
-                                </div>
-                            </div>
-                            <!-- /number -->
-
-                            <!-- number -->
-                            <div class="col-md-3 col-sm-3 col-xs-6">
-                                <div class="number">
-                                    <h3><span class="counter" data-from="0" data-to="20" data-speed="1500">0</span>+</h3>
-                                    <p>Speakers</p>
-                                </div>
-                            </div>
-                            <!-- /number -->
-                        </div>
+                    
                         <!-- /row -->
                     </div>
                     <!-- /Numbers -->
