--- a/SCFD-2018/index.html
+++ b/SCFD-2018/index.html
@@ -219,35 +219,6 @@
     </div>
     <!-- /Galery -->
 
-    <!-- Video CTA -->
-    <div id="video-cta" class="section">
-        <!-- background image -->
-        <div class="section-bg" style="background-image:url(./img/background02.jpg)" data-stellar-background-ratio="0.5"></div>
-        <!-- /background image -->
-
-        <!-- container -->
-        <div class="container">
-            <!-- row -->
-            <div class="row">
-                <!-- cta content -->
-                <div class="col-md-8 col-md-offset-2">
-                    <div class="cta-content text-center">
-                        <a class="video-play" href="#">
-                            <i class="fa fa-play"></i>
-                        </a>
-                        <h2>Watch this video</h2>
-                        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-                            incididunt ut labore et dolore magna aliqua.</p>
-                    </div>
-                </div>
-                <!-- /cta content -->
-            </div>
-            <!-- /row -->
-        </div>
-        <!-- /container -->
-    </div>
-    <!-- /Video CTA -->
-
     <!-- Event Schedule -->
     <div id="schedule" class="section">
         <!-- container -->
@@ -256,7 +227,7 @@
             <div class="row">
                 <!-- section title -->
                 <div class="section-title">
-                    <h3 class="title"><span>Event</span> <span style="color: #dd0a37;">Schedule</span></h3>
+                    <h3 class="title"><span>A</span> <span style="color: #dd0a37;">Programação</span></h3>
                 </div>
                 <!-- /section title -->
 
