--- a/SCFD-2018/index.html
+++ b/SCFD-2018/index.html
@@ -95,7 +95,7 @@
                         <div class="home-content">
                             <h1>II Semana de Ciência, Fé e Desenvolvimento Social</h1>
                             <h4 class="lead">Em andamento...</h4>
-                            <a href="#" class="main-btn">Buy Ticket</a>
+                            <a href="#" class="main-btn">INSCREVA-SE</a>
                         </div>
                     </div>
                     <!-- /home content -->
@@ -123,11 +123,11 @@
                 <div class="col-md-10 col-md-offset-1 text-center">
                     <!-- about content -->
                     <div class="about-content">
-                        <p>Quando as ciências naturais ainda eram chamadas de filosofia natural já se discutia a sinuosa relação entre fé, ciência e suas esferas. Debates que remontam ao século XIII já tratavam da interação entre os conhecimentos filosóficos e teológicos.<br/>
+                        <p>Quando as ciências naturais ainda eram chamadas de filosofia natural já se discutia a sinuosa relação entre fé, ciência e suas esferas. Debates que remontam ao século XIII já tratavam da interação entre os conhecimentos filosóficos e teológicos.</p>
 
-                        Muitos cientistas possuidores de alguma fé, como Galileu Galilei, Michael Faraday, Isaac Newton, entre outros, se posicionaram a esse respeito. Muitos filósofos e teólogos escreveram tratados sobre o tema. Nesse contexto, a I Semana de Ciência, Fé e Desenvolvimento Social possui o objetivo de ser uma plataforma para tais reflexões a fim de promover o diálogo harmonioso do que seria esfera da fé e esfera da ciência. Assim sendo, justifica-se o tema: "Desmistificando a Incompatibilidade".
+                        <p>Muitos cientistas possuidores de alguma fé, como Galileu Galilei, Michael Faraday, Isaac Newton, entre outros, se posicionaram a esse respeito. Muitos filósofos e teólogos escreveram tratados sobre o tema. Nesse contexto, a II Semana de Ciência, Fé e Desenvolvimento Social possui o objetivo de ser uma plataforma para tais reflexões a fim de promover o diálogo harmonioso do que seria esfera da fé e esfera da ciência. Assim sendo, justifica-se o tema: "Cosmovisão cristã para o desenvolvimento e justiça social".</p>
 
-                        Pretende-se, também, promover a interdisciplinarização de conhecimentos, pensando no fortalecimento da cultura regional, construção de metodologias participativas, desenvolvimento de conhecimentos científicos e aplicação de tecnologias sociais, fomentando assim, processos de adequação e geração de sustentabilidade produtiva..</p>
+                        <p>Pretende-se, também, promover a interdisciplinarização de conhecimentos, pensando no fortalecimento da cultura regional, construção de metodologias participativas, desenvolvimento de conhecimentos científicos e aplicação de tecnologias sociais, fomentando assim, processos de adequação e geração de sustentabilidade produtiva..</p>
                     </div>
                     <!-- /about content -->
 
