--- a/SCFD-2018/index.html
+++ b/SCFD-2018/index.html
@@ -186,7 +186,7 @@
             <div class="row">
                 <!-- section title -->
                 <div class="section-title">
-                    <h3 class="title"><span>A</span> <span style="color: #dd0a37;">Programação</span></h3>
+                    <h3 class="title"><span>A</span> <span style="color: #192880;">Programação</span></h3>
                 </div>
                 <!-- /section title -->
 
@@ -197,16 +197,14 @@
                         <div class="event">
                             <div class="event-day">
                                 <div>
-                                    <span class="day">15</span>
-                                    <span class="year">Feb, 2018</span>
+                                    <span class="day">22</span>
+                                    <span class="year">Nov, 2018</span>
                                 </div>
                             </div>
                             <div class="event-content">
-                                <p class="event-time"><i class="fa fa-clock-o"></i> 8 : 00 AM - 11 : 00 AM</p>
-                                <h3 class="event-title">His id altera fabellas facilisis. Has eros assueverit cu</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-                                    incididunt ut labore et dolore magna aliqua.</p>
-                                <p>By <a href="#">John Doe</a></p>
+                                <p class="event-time"><i class="fa fa-clock-o"></i> 7h : 30min - 8h : 30min</p>
+                                <h3 class="event-title">Credenciamento</h3>
+                                <p>Auditório: (inscrições para entrega de certificados)</p>
                             </div>
                         </div>
                         <!-- /event -->
@@ -215,12 +213,10 @@
                         <div class="event">
                             <div class="event-hour"></div>
                             <div class="event-content">
-                                <p class="event-time"><i class="fa fa-clock-o"></i> 8 : 00 AM - 11 : 00 AM</p>
-                                <h3 class="event-title">Perpetua consectetuer definitiones id sea, mei utinam eripuit
-                                    ne</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-                                    incididunt ut labore et dolore magna aliqua.</p>
-                                <p>By <a href="#">John Doe</a></p>
+                                <p class="event-time"><i class="fa fa-clock-o"></i> 8h : 30min - 9h : 00min</p>
+                                <h3 class="event-title">Cerimonial de Abertura</h3>
+                                <p>Programação Cultural</p>
+                                <!-- <p>By <a href="#">John Doe</a></p> -->
                             </div>
                         </div>
                         <!-- /event -->
@@ -229,11 +225,64 @@
                         <div class="event">
                             <div class="event-hour"></div>
                             <div class="event-content">
-                                <p class="event-time"><i class="fa fa-clock-o"></i> 8 : 00 AM - 11 : 00 AM</p>
-                                <h3 class="event-title">At mucius deserunt delicatissimi eam, labitur detraxit ut sit</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-                                    incididunt ut labore et dolore magna aliqua.</p>
-                                <p>By <a href="#">John Doe</a></p>
+                                <p class="event-time"><i class="fa fa-clock-o"></i> 9h : 00min - 09 : 30min</p>
+                                <h3 class="event-title">Intervalo</p>
+                                <!-- <p>By <a href="#">John Doe</a></p> -->
+                            </div>
+                        </div>
+                        <!-- /event -->
+
+                        <!-- event -->
+                        <div class="event">
+                            <div class="event-hour"></div>
+                            <div class="event-content">
+                                <p class="event-time"><i class="fa fa-clock-o"></i> 9h : 30min - 12 : 00min</p>
+                                <h3 class="event-title">Decifrando sombras: avaliando os limites e a relação entre a ciência e a fé cristã</p>
+                                <p>por <a href="#">Dr. Gustavo Assi</a></p>
+                            </div>
+                        </div>
+                        <!-- /event -->
+
+                        <!-- event -->
+                        <div class="event">
+                            <div class="event-hour"></div>
+                            <div class="event-content">
+                                <p class="event-time"><i class="fa fa-clock-o"></i> 13h : 00min - 15 : 00min</p>
+                                <h3 class="event-title">Minicurso: Aplicação da metodologia Etnográfica e Sócioespacial em comunidades Não Alcançadas</p>
+                                <p>por <a href="#">Dr. Bruno Gomes</a></p>
+                            </div>
+                        </div>
+                        <!-- /event -->
+
+                        <!-- event -->
+                        <div class="event">
+                            <div class="event-hour"></div>
+                            <div class="event-content">
+                                <p class="event-time"><i class="fa fa-clock-o"></i> 15h : 00min - 16 : 00min</p>
+                                <h3 class="event-title">Reconhecendo as bases para o desenvolvimento sustentável: reflexões nos campos da engenharia e da comunicação</p>
+                                <p>por <a href="#">Dr. Gustavo Assi</a></p>
+                            </div>
+                        </div>
+                        <!-- /event -->
+ 
+                        <!-- event -->
+                        <div class="event">
+                            <div class="event-hour"></div>
+                            <div class="event-content">
+                                <p class="event-time"><i class="fa fa-clock-o"></i> 19h : 00min - 20 : 30min</p>
+                                <h3 class="event-title">Cristianismo, Política e Transformação Social no Brasil Contemporâneo</p>
+                                <p>por <a href="#">Dr. Henrique Alonso (UFRN)</a></p>
+                            </div>
+                        </div>
+                        <!-- /event -->
+
+                        <!-- event -->
+                        <div class="event">
+                            <div class="event-hour"></div>
+                            <div class="event-content">
+                                <p class="event-time"><i class="fa fa-clock-o"></i> 20h : 00min - 22 : 00min</p>
+                                <h3 class="event-title">Mesa Redonda (Ciência e Fé)</p>
+                                <p>por <a href="#">Edu, Henrique Alonso, Gustavo Assi, Bruno Gomes</a></p>
                             </div>
                         </div>
                         <!-- /event -->
