--- a/SCFD-2018/index.html
+++ b/SCFD-2018/index.html
@@ -95,6 +95,11 @@
                         <div class="home-content">
                             <h1>II Semana de Ciência, Fé e Desenvolvimento Social</h1>
                             <h4 class="lead">Em andamento...</h4>
+                            <div class="countdown">
+								<div id="timer" class="text-white"></div>
+							</div>
+							<h4><span class="lnr lnr-calendar-full"></span>  05th - 09th february, 2018</h4>
+							<h4><span class="lnr lnr-map"></span>  56/8, Dhanmondi, Dhaka - 1205</h4>
                             <a href="#" class="main-btn">INSCREVA-SE</a>
                         </div>
                     </div>
