--- a/SCFD-2018/index.html
+++ b/SCFD-2018/index.html
@@ -410,8 +410,8 @@
                                 <a href="#"><i class="fa fa fa-linkedin"></i></a>
                             </div>
                             <div class="speaker-content">
-                                <h2>John Doe</h2>
-                                <span>Manager, CEO</span>
+                                <h2>ronaldo</h2>
+                                <span></span>
                             </div>
                         </div>
                     </div>
@@ -454,16 +454,10 @@
                                     </div>
                                     <div class="col-md-7">
                                         <div class="speaker-modal-content">
-                                            <h2 class="speaker-name">John Doe</h2>
-                                            <span class="speaker-job">- Manager, CEO</span>
+                                            <h2 class="speaker-name">Prof. Dr. Gustavo Assi</h2>
+                                            <span class="speaker-job"></span>
 
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                                                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-                                                veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                                                commodo consequat. Duis aute
-                                                irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-                                                fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
-                                                sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                                            <p>O Prof. Dr. Gustavo Roque da Silva Assi é docente da Escola Politécnica da Universidade de São Paulo. Atua como Coordenador do Curso de Graduação em Engenhara Naval da EPUSP e membro da CRInt Comissão de Relações Internacionais da EPUSP. Bolsista de Produtividade em Pesquisa do CNPq, atua como Coordenador do Laboratório de Hidrodinâmica Experimental do NDF Núcleo de Dinâmica e Fluidos da EPUSP.</p>
 
                                             <div class="speaker-website">
                                                 <h4>Website</h4>
