--- a/SCFD-2018/index.html
+++ b/SCFD-2018/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
     <title>II Semana de Ciência, Fé e Desenvolvimento Social</title>
 
@@ -25,13 +24,10 @@
     <!-- Custom stlylesheet -->
     <link type="text/css" rel="stylesheet" href="css/style.css" />
 
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-			  <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-			  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-			<![endif]-->
+
 </head>
+
+
 
 <body>
 
@@ -39,6 +35,10 @@
     <header id="header" class="transparent-navbar">
         <!-- container -->
         <div class="container">
+
+
+
+<!--------------------------------- NAVBAR ----------------------------------------------->
             <!-- navbar header -->
             <div class="navbar-header">
                 <!-- Logo -->
@@ -57,6 +57,8 @@
                 <!-- /Mobile toggle -->
             </div>
             <!-- /navbar header -->
+
+
 
             <!-- Navegação -->
             <!-- Matheus: Edite os titulos do navbar para português 
@@ -77,8 +79,10 @@
         <!-- /container -->
     </header>
     <!-- /Header -->
+<!--------------------------------- FIM DO NAVBAR ----------------------------------------------->
 
-    <!-- Home -->
+
+<!------------------------------------- TELA PRINCIPAL ------------------------------------------->
     <div id="home">
         <!-- background image -->
         <div class="section-bg" style="background-image:url(./img/background03.jpg);" data-stellar-background-ratio="0.5"></div>
@@ -96,10 +100,10 @@
                             <h1>II Semana de Ciência, Fé e Desenvolvimento Social</h1>
                             <h4 class="lead">Em andamento...</h4>
                             <div class="countdown">
-								<div id="timer" class="text-white"></div>
-							</div>
-							<h4><span class="lnr lnr-calendar-full"></span>  05th - 09th february, 2018</h4>
-							<h4><span class="lnr lnr-map"></span>  56/8, Dhanmondi, Dhaka - 1205</h4>
+                                <div id="timer" class="text-white"></div>
+                            </div>
+                            <h4><span class="lnr lnr-calendar-full"></span> 05th - 09th february, 2018</h4>
+                            <h4><span class="lnr lnr-map"></span> 56/8, Dhanmondi, Dhaka - 1205</h4>
                             <a href="#" class="main-btn">INSCREVA-SE</a>
                         </div>
                     </div>
@@ -111,9 +115,11 @@
         </div>
         <!-- /home wrapper -->
     </div>
-    <!-- /Home -->
+<!------------------------------------- TELA PRINCIPAL ------------------------------------------->
 
-    <!-- About -->
+
+
+<!----------------------------------------- O EVENTO ----------------------------------------------->
     <div id="about" class="section">
         <!-- container -->
         <div class="container">
@@ -128,23 +134,35 @@
                 <div class="col-md-10 col-md-offset-1 text-center">
                     <!-- about content -->
                     <div class="about-content">
-                        <p>Quando as ciências naturais ainda eram chamadas de filosofia natural já se discutia a sinuosa relação entre fé, ciência e suas esferas. Debates que remontam ao século XIII já tratavam da interação entre os conhecimentos filosóficos e teológicos.</p>
+                        <p>Quando as ciências naturais ainda eram chamadas de filosofia natural já se discutia a
+                            sinuosa relação entre fé, ciência e suas esferas. Debates que remontam ao século XIII já
+                            tratavam da interação entre os conhecimentos filosóficos e teológicos.</p>
 
-                        <p>Muitos cientistas possuidores de alguma fé, como Galileu Galilei, Michael Faraday, Isaac Newton, entre outros, se posicionaram a esse respeito. Muitos filósofos e teólogos escreveram tratados sobre o tema. Nesse contexto, a II Semana de Ciência, Fé e Desenvolvimento Social possui o objetivo de ser uma plataforma para tais reflexões a fim de promover o diálogo harmonioso do que seria esfera da fé e esfera da ciência. Assim sendo, justifica-se o tema: "Cosmovisão cristã para o desenvolvimento e justiça social".</p>
+                        <p>Muitos cientistas possuidores de alguma fé, como Galileu Galilei, Michael Faraday, Isaac
+                            Newton, entre outros, se posicionaram a esse respeito. Muitos filósofos e teólogos
+                            escreveram tratados sobre o tema. Nesse contexto, a II Semana de Ciência, Fé e
+                            Desenvolvimento Social possui o objetivo de ser uma plataforma para tais reflexões a fim de
+                            promover o diálogo harmonioso do que seria esfera da fé e esfera da ciência. Assim sendo,
+                            justifica-se o tema: "Cosmovisão cristã para o desenvolvimento e justiça social".</p>
 
-                        <p>Pretende-se, também, promover a interdisciplinarização de conhecimentos, pensando no fortalecimento da cultura regional, construção de metodologias participativas, desenvolvimento de conhecimentos científicos e aplicação de tecnologias sociais, fomentando assim, processos de adequação e geração de sustentabilidade produtiva..</p>
+                        <p>Pretende-se, também, promover a interdisciplinarização de conhecimentos, pensando no
+                            fortalecimento da cultura regional, construção de metodologias participativas,
+                            desenvolvimento de conhecimentos científicos e aplicação de tecnologias sociais, fomentando
+                            assim, processos de adequação e geração de sustentabilidade produtiva..</p>
                     </div>
                     <!-- /about content -->
 
-                    
-                        <!-- /row -->
-                    </div>
-                    <!-- /Numbers -->
+<!----------------------------------------- FIM -  O EVENTO ----------------------------------------------->
+
+
+                    <!-- /row -->
                 </div>
+                <!-- /Numbers -->
             </div>
-            <!-- row -->
         </div>
-        <!-- /container -->
+        <!-- row -->
+    </div>
+    <!-- /container -->
     </div>
     <!-- /About -->
 
@@ -232,7 +250,7 @@
                             <div class="event-content">
                                 <p class="event-time"><i class="fa fa-clock-o"></i> 9h : 00min - 09 : 30min</p>
                                 <h3 class="event-title">Intervalo</p>
-                                <!-- <p>By <a href="#">John Doe</a></p> -->
+                                    <!-- <p>By <a href="#">John Doe</a></p> -->
                             </div>
                         </div>
                         <!-- /event -->
@@ -242,8 +260,9 @@
                             <div class="event-hour"></div>
                             <div class="event-content">
                                 <p class="event-time"><i class="fa fa-clock-o"></i> 9h : 30min - 12 : 00min</p>
-                                <h3 class="event-title">Decifrando sombras: avaliando os limites e a relação entre a ciência e a fé cristã</p>
-                                <p>por <a href="#">Dr. Gustavo Assi</a></p>
+                                <h3 class="event-title">Decifrando sombras: avaliando os limites e a relação entre a
+                                    ciência e a fé cristã</p>
+                                    <p>por <a href="#">Dr. Gustavo Assi</a></p>
                             </div>
                         </div>
                         <!-- /event -->
@@ -253,8 +272,9 @@
                             <div class="event-hour"></div>
                             <div class="event-content">
                                 <p class="event-time"><i class="fa fa-clock-o"></i> 13h : 00min - 15 : 00min</p>
-                                <h3 class="event-title">Minicurso: Aplicação da metodologia Etnográfica e Sócioespacial em comunidades Não Alcançadas</p>
-                                <p>por <a href="#">Dr. Bruno Gomes</a></p>
+                                <h3 class="event-title">Minicurso: Aplicação da metodologia Etnográfica e Sócioespacial
+                                    em comunidades Não Alcançadas</p>
+                                    <p>por <a href="#">Dr. Bruno Gomes</a></p>
                             </div>
                         </div>
                         <!-- /event -->
@@ -264,19 +284,21 @@
                             <div class="event-hour"></div>
                             <div class="event-content">
                                 <p class="event-time"><i class="fa fa-clock-o"></i> 15h : 00min - 16 : 00min</p>
-                                <h3 class="event-title">Reconhecendo as bases para o desenvolvimento sustentável: reflexões nos campos da engenharia e da comunicação</p>
-                                <p>por <a href="#">Dr. Gustavo Assi</a></p>
+                                <h3 class="event-title">Reconhecendo as bases para o desenvolvimento sustentável:
+                                    reflexões nos campos da engenharia e da comunicação</p>
+                                    <p>por <a href="#">Dr. Gustavo Assi</a></p>
                             </div>
                         </div>
                         <!-- /event -->
- 
+
                         <!-- event -->
                         <div class="event">
                             <div class="event-hour"></div>
                             <div class="event-content">
                                 <p class="event-time"><i class="fa fa-clock-o"></i> 19h : 00min - 20 : 30min</p>
-                                <h3 class="event-title">Cristianismo, Política e Transformação Social no Brasil Contemporâneo</p>
-                                <p>por <a href="#">Dr. Henrique Alonso (UFRN)</a></p>
+                                <h3 class="event-title">Cristianismo, Política e Transformação Social no Brasil
+                                    Contemporâneo</p>
+                                    <p>por <a href="#">Dr. Henrique Alonso (UFRN)</a></p>
                             </div>
                         </div>
                         <!-- /event -->
@@ -287,7 +309,7 @@
                             <div class="event-content">
                                 <p class="event-time"><i class="fa fa-clock-o"></i> 20h : 00min - 22 : 00min</p>
                                 <h3 class="event-title">Mesa Redonda (Ciência e Fé)</p>
-                                <p>por <a href="#">Edu, Henrique Alonso, Gustavo Assi, Bruno Gomes</a></p>
+                                    <p>por <a href="#">Edu, Henrique Alonso, Gustavo Assi, Bruno Gomes</a></p>
                             </div>
                         </div>
                         <!-- /event -->
@@ -427,6 +449,72 @@
                 <div class="col-md-4 col-sm-6">
                     <div class="speaker" data-toggle="modal" data-target="#speaker-modal-1">
                         <div class="speaker-img">
+                            <img src="./img/speaker02.jpg" alt="">
+                        </div>
+                        <div class="speaker-body">
+                            <div class="speaker-social">
+                                <a href="#"><i class="fa fa-facebook"></i></a>
+                                <a href="#"><i class="fa fa-twitter"></i></a>
+                                <a href="#"><i class="fa fa-instagram"></i></a>
+                                <a href="#"><i class="fa fa fa-linkedin"></i></a>
+                            </div>
+                            <div class="speaker-content">
+                                <h2>ronaldo</h2>
+                                <span></span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- /speaker -->
+
+                <!-- speaker -->
+                <div class="col-md-4 col-sm-6">
+                    <div class="speaker" data-toggle="modal" data-target="#speaker-modal-1">
+                        <div class="speaker-img">
+                            <img src="./img/speaker02.jpg" alt="">
+                        </div>
+                        <div class="speaker-body">
+                            <div class="speaker-social">
+                                <a href="#"><i class="fa fa-facebook"></i></a>
+                                <a href="#"><i class="fa fa-twitter"></i></a>
+                                <a href="#"><i class="fa fa-instagram"></i></a>
+                                <a href="#"><i class="fa fa fa-linkedin"></i></a>
+                            </div>
+                            <div class="speaker-content">
+                                <h2>ronaldo</h2>
+                                <span></span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- /speaker -->
+
+                <!-- speaker -->
+                <div class="col-md-4 col-sm-6">
+                    <div class="speaker" data-toggle="modal" data-target="#speaker-modal-1">
+                        <div class="speaker-img">
+                            <img src="./img/speaker02.jpg" alt="">
+                        </div>
+                        <div class="speaker-body">
+                            <div class="speaker-social">
+                                <a href="#"><i class="fa fa-facebook"></i></a>
+                                <a href="#"><i class="fa fa-twitter"></i></a>
+                                <a href="#"><i class="fa fa-instagram"></i></a>
+                                <a href="#"><i class="fa fa fa-linkedin"></i></a>
+                            </div>
+                            <div class="speaker-content">
+                                <h2>ronaldo</h2>
+                                <span></span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- /speaker -->
+
+                <!-- speaker -->
+                <div class="col-md-4 col-sm-6">
+                    <div class="speaker" data-toggle="modal" data-target="#speaker-modal-1">
+                        <div class="speaker-img">
                             <img src="./img/speaker03.jpg" alt="">
                         </div>
                         <div class="speaker-body">
@@ -462,7 +550,12 @@
                                             <h2 class="speaker-name">Prof. Dr. Gustavo Assi</h2>
                                             <span class="speaker-job"></span>
 
-                                            <p>O Prof. Dr. Gustavo Roque da Silva Assi é docente da Escola Politécnica da Universidade de São Paulo. Atua como Coordenador do Curso de Graduação em Engenhara Naval da EPUSP e membro da CRInt Comissão de Relações Internacionais da EPUSP. Bolsista de Produtividade em Pesquisa do CNPq, atua como Coordenador do Laboratório de Hidrodinâmica Experimental do NDF Núcleo de Dinâmica e Fluidos da EPUSP.</p>
+                                            <p>O Prof. Dr. Gustavo Roque da Silva Assi é docente da Escola Politécnica
+                                                da Universidade de São Paulo. Atua como Coordenador do Curso de
+                                                Graduação em Engenhara Naval da EPUSP e membro da CRInt Comissão de
+                                                Relações Internacionais da EPUSP. Bolsista de Produtividade em Pesquisa
+                                                do CNPq, atua como Coordenador do Laboratório de Hidrodinâmica
+                                                Experimental do NDF Núcleo de Dinâmica e Fluidos da EPUSP.</p>
 
                                             <div class="speaker-website">
                                                 <h4>Website</h4>
