--- a/SCFD-2018/provisoria.html
+++ b/SCFD-2018/provisoria.html
@@ -68,9 +68,12 @@
                             <br/>
                             <br/>
                             <br/>
-                            <h4><span class="lnr lnr-calendar-full"></span> 05th - 09th february, 2018</h4>
-                            <h4><span class="lnr lnr-map"></span> 56/8, Dhanmondi, Dhaka - 1205</h4>
-                            <a href="#" class="main-btn">INSCREVA-SE</a>
+                            <div class="countdown">
+                                    <div id="timer" class="text-white"></div>
+                                </div>
+                                <h4><span class="lnr lnr-calendar-full"></span>  Dia 22 - 23 de Novembro, 2018</h4>
+                                <h4><span class="lnr lnr-map"></span>  IFRN - Campus Currais Novos - Rua Manoel Lopes Filho, 773, Currais Novos-RN </h4>
+                                <a href="#" class="main-btn">INSCREVA-SE</a>
                         </div>
                     </div>
                     <!-- /home content -->
