Complentando o segundo dia da programação
Adicionando a programação do dia 23

--- a/SCFD-2018/index.html
+++ b/SCFD-2018/index.html
@@ -318,16 +318,15 @@
                         <div class="event">
                             <div class="event-day">
                                 <div>
-                                    <span class="day">16</span>
-                                    <span class="year">Feb, 2018</span>
+                                    <span class="day">23</span>
+                                    <span class="year">Nov, 2018</span>
                                 </div>
                             </div>
                             <div class="event-content">
-                                <p class="event-time"><i class="fa fa-clock-o"></i> 8 : 00 AM - 11 : 00 AM</p>
-                                <h3 class="event-title">His id altera fabellas facilisis. Has eros assueverit cu</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-                                    incididunt ut labore et dolore magna aliqua.</p>
-                                <p>By <a href="#">John Doe</a></p>
+                                <p class="event-time"><i class="fa fa-clock-o"></i></p>
+                                <h3 class="event-title"></h3>
+                                <p></p>
+                                <p> <a href="#"></a></p>
                             </div>
                         </div>
                         <!-- /event -->
@@ -336,29 +335,9 @@
                         <div class="event">
                             <div class="event-hour"></div>
                             <div class="event-content">
-                                <p class="event-time"><i class="fa fa-clock-o"></i> 8 : 00 AM - 11 : 00 AM</p>
-                                <h3 class="event-title">At mucius deserunt delicatissimi eam, labitur detraxit ut sit</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-                                    incididunt ut labore et dolore magna aliqua.</p>
-                                <p>By <a href="#">John Doe</a></p>
-                            </div>
-                        </div>
-                        <!-- /event -->
-
-                        <!-- event -->
-                        <div class="event">
-                            <div class="event-day">
-                                <div>
-                                    <span class="day">17</span>
-                                    <span class="year">Feb, 2018</span>
-                                </div>
-                            </div>
-                            <div class="event-content">
-                                <p class="event-time"><i class="fa fa-clock-o"></i> 8 : 00 AM - 11 : 00 AM</p>
-                                <h3 class="event-title">His id altera fabellas facilisis. Has eros assueverit cu</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-                                    incididunt ut labore et dolore magna aliqua.</p>
-                                <p>By <a href="#">John Doe</a></p>
+                                <p class="event-time"><i class="fa fa-clock-o"></i> 08h : 30min - 10: 00min</p>
+                                <h3 class="event-title">Economia e justiça social numa perspectiva cristã</p>
+                                    <p>por <a href="#">Dr. Edu Silvestre Albuquerque (UFRN)</a></p>
                             </div>
                         </div>
                         <!-- /event -->
@@ -367,18 +346,60 @@
                         <div class="event">
                             <div class="event-hour"></div>
                             <div class="event-content">
-                                <p class="event-time"><i class="fa fa-clock-o"></i> 8 : 00 AM - 11 : 00 AM</p>
-                                <h3 class="event-title">At mucius deserunt delicatissimi eam, labitur detraxit ut sit</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-                                    incididunt ut labore et dolore magna aliqua.</p>
-                                <p>By <a href="#">John Doe</a></p>
+                                <p class="event-time"><i class="fa fa-clock-o"></i> 10h : 00min - 12 : 00min</p>
+                                <h3 class="event-title">Fé e obra: ações de sustentabilidade socio-ambientais em regiões semiáridas</p>
+                                    <p>por <a href="#">Mesa Redonda (Moderador Dr. Saint Clair)</a></p>
+                            </div>
+                        </div>
+                        <!-- /event -->
+                        
+                        <!-- event -->
+                        <div class="event">
+                            <div class="event-hour"></div>
+                            <div class="event-content">
+                                <p class="event-time"><i class="fa fa-clock-o"></i> 13h : 15min - 14 : 30min</p>
+                                <h3 class="event-title">O pioneirismo dos direitos humanos e dos direitos civis à luz da Bíblia</p>
+                                    <p>por <a href="#">Dr. Roberto Monteiro (IFRN)</a></p>
+                            </div>
+                        </div>
+                        <!-- /event -->
+
+                        <!-- event -->
+                        <div class="event">
+                            <div class="event-hour"></div>
+                            <div class="event-content">
+                                <p class="event-time"><i class="fa fa-clock-o"></i> 14 : 30min - 15 : 00min</p>
+                                <h3 class="event-title">Intervalo</p>
+                                    <p><a href="#"></a></p>
+                            </div>
+                        </div>
+                        <!-- /event -->
+
+                        <!-- event -->
+                        <div class="event">
+                            <div class="event-hour"></div>
+                            <div class="event-content">
+                                <p class="event-time"><i class="fa fa-clock-o"></i> 15h : 00min - 17 : 30min</p>
+                                <h3 class="event-title">Perspectiva histórica sobre a busca anatômica pela alma</p>
+                                    <p>por <a href="#">Dr. Bento João</a></p>
+                            </div>
+                        </div>
+                        <!-- /event -->
+                       
+                       <!-- event -->
+                        <div class="event">
+                            <div class="event-hour"></div>
+                            <div class="event-content">
+                                <p class="event-time"><i class="fa fa-clock-o"></i>17 : 30min</p>
+                                <h3 class="event-title">Encerramento</p>
+                                    <p><a href="#"></a></p>
                             </div>
                         </div>
                         <!-- /event -->
                     </div>
 
                     <div class="download-btn">
-                        <a href="#" class="main-btn">Download Schedule</a>
+                        <a href="#" class="main-btn">Download</a>
                     </div>
 
                 </div>
