--- a/SCFD-2018/provisoria.html
+++ b/SCFD-2018/provisoria.html
@@ -71,7 +71,7 @@
                             <div class="countdown">
                                     <div id="timer" class="text-white"></div>
                                 </div>
-                                <h4><span class="lnr lnr-calendar-full"></span>  Dia 22 - 23 de Novembro, 2018</h4>
+                                <h4><span class="lnr lnr-calendar-full"></span>  Dias 22 e 23 de Novembro, 2018</h4>
                                 <h4><span class="lnr lnr-map"></span>  IFRN - Campus Currais Novos - Rua Manoel Lopes Filho, 773, Currais Novos-RN </h4>
                                 <a href="#" class="main-btn">INSCREVA-SE</a>
                         </div>
