--- a/SCFD-2018/index.html
+++ b/SCFD-2018/index.html
@@ -134,22 +134,11 @@
                 <div class="col-md-10 col-md-offset-1 text-center">
                     <!-- about content -->
                     <div class="about-content">
-                        <p>Quando as ciências naturais ainda eram chamadas de filosofia natural já se discutia a
-                            sinuosa relação entre fé, ciência e suas esferas. Debates que remontam ao século XIII já
-                            tratavam da interação entre os conhecimentos filosóficos e teológicos.</p>
-
-                        <p>Muitos cientistas possuidores de alguma fé, como Galileu Galilei, Michael Faraday, Isaac
-                            Newton, entre outros, se posicionaram a esse respeito. Muitos filósofos e teólogos
-                            escreveram tratados sobre o tema. Nesse contexto, a II Semana de Ciência, Fé e
-                            Desenvolvimento Social possui o objetivo de ser uma plataforma para tais reflexões a fim de
-                            promover o diálogo harmonioso do que seria esfera da fé e esfera da ciência. Assim sendo,
-                            justifica-se o tema: "Cosmovisão cristã para o desenvolvimento e justiça social".</p>
-
-                        <p>Pretende-se, também, promover a interdisciplinarização de conhecimentos, pensando no
-                            fortalecimento da cultura regional, construção de metodologias participativas,
-                            desenvolvimento de conhecimentos científicos e aplicação de tecnologias sociais, fomentando
-                            assim, processos de adequação e geração de sustentabilidade produtiva..</p>
+                       <div align="left"> <p>O diálogo entre Ciência e Fé está na base dos fundamentos intelectuais da Ciência Moderna no século XVI. O processo de secularização nas ciências, bem como na sociedade, tentou suprimir o legado de cientistas que, a partir de uma cosmovisão cristã, contribuíram diretamente para o avanço do desenvolvimento social, tecnológico e dos direitos humanos.</p>
+                        <p>A II Semana de Ciência, Fé e Desenvolvimento Social traz como tema desse ano “Cosmovisão Cristã para o Desenvolvimento e Justiça Social” e apresenta como objetivos principais a discussão e a socialização de teorias e metodologias fundadas na Cosmovisão Cristã para análises de realidades humanas compreendidas em sua totalidade humanística, tecnológica, social e espiritual.</p>
+                        <p>Desta forma, é com muita satisfação que convidamos toda comunidade acadêmica e sociedade civil para participarem das Palestras, Workhshop e Mesas Redondas, contribuindo, assim, para promoção de um debate crítico e para  aprimoramento de habilidades e de competências do discurso científico  e sua responsabilidade social para construção de uma sociedade mais justa e fraternalmente solidária.</p>
                     </div>
+                </div>
                     <!-- /about content -->
 
 <!----------------------------------------- FIM -  O EVENTO ----------------------------------------------->
