--- a/public_html/index.html
+++ b/public_html/index.html
@@ -151,7 +151,7 @@
 				<div class="col-md-8 col-md-offset-2 text-center">
 					<!-- about content -->
 					<div class="about-content">
-						<p class="fade">O diálogo entre Ciência e Fé está na base dos fundamentos intelectuais da Ciência Moderna no
+						<div align="left"><p class="fade">O diálogo entre Ciência e Fé está na base dos fundamentos intelectuais da Ciência Moderna no
 							século XVI.
 							O processo de secularização nas ciências, bem como na sociedade,
 							tentou suprimir o legado de cientistas que, a partir de uma cosmovisão cristã,
@@ -168,7 +168,7 @@
 							participarem das Palestras, Workhshop e Mesas Redondas, contribuindo, assim, para promoção de um debate crítico
 							e para aprimoramento de habilidades e de competências do discurso científico e sua responsabilidade social para
 							construção de uma sociedade mais justa e fraternalmente solidária.</p>
-
+							</div>
 					</div>
 					<!-- /about content -->
 				</div>
