--- a/public_html/index.html
+++ b/public_html/index.html
@@ -58,7 +58,7 @@
 					<li><a href="#about">Evento</a></li>
 					<li><a href="#schedule">Programação</a></li>
 					<li><a href="#speakers">Palestrantes</a></li>
-					<li><a href="#sponsors">Patrocínios</a></li>
+					<li><a href="#sponsors">Colaboradores</a></li>
 					<li><a href="#contact">Local</a></li>
 				</ul>
 			</nav>
@@ -551,7 +551,7 @@
 			<div class="row">
 				<!-- section title -->
 				<div class="section-title">
-					<h3 class="title" style="color:white;" ><span>Realização</span></h3>
+					<h3 class="title" style="color:white;" ><span>Colaboradores</span></h3>
 				</div>
 				<!-- /section title -->
 
@@ -580,34 +580,6 @@
 					<h3 class="title"><span>Contact</span> <span style="color: #0b0f28;">Info</span></h3>
 				</div>
 				<!-- /section title -->
-
-				<!-- contact -->
-				<div class="col-sm-4">
-					<div class="contact">
-						<h3>Address</h3>
-						<p>2635 Simons Hollow Road, NEW YORK</p>
-					</div>
-				</div>
-				<!-- /contact -->
-
-				<!-- contact -->
-				<div class="col-sm-4">
-					<div class="contact">
-						<h3>Phone</h3>
-						<p>570-751-2415</p>
-					</div>
-				</div>
-				<!-- /contact -->
-
-				<!-- contact -->
-				<div class="col-sm-4">
-					<div class="contact">
-						<h3>Email</h3>
-						<a href="#">event@support.com</a>
-					</div>
-				</div>
-				<!-- /contact -->
-
 			</div>
 			<!-- /row -->
 		</div>
@@ -650,14 +622,12 @@
 				<!-- /contact social -->
 
 				<!-- copyright -->
-				<div class="col-md-4 col-md-pull-8">
+				<div class="col-md-8 col-md-offset-2 text-center">
 					<span class="copyright">
 						<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-						Copyright &copy;
-						<script>
-							document.write(new Date().getFullYear());
-						</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a
-						 href="https://colorlib.com" target="_blank">Colorlib</a>
+						
+						<p>II Semana de Ciência, Fé e Desenvolvimento Social</p>
+						<p>2018 - Currais Novos - RN</p>
 						<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></span>
 				</div>
 				<!-- /copyright -->
