--- a/public_html/index.html
+++ b/public_html/index.html
@@ -370,6 +370,7 @@
 					</div>
 					<!-- /event -->
 
+
 					<!-- event -->
 					<div class="event fade">
 						<div class="event-hour"></div>
@@ -417,7 +418,7 @@
 				<div class="col-md-4 col-sm-6">
 					<div class="speaker" data-toggle="modal" data-target="#speaker-modal-1">
 						<div class="speaker-img">
-							<img src="./img/p1.jpg" alt="">
+							<img src="./img/palestrante01.png" alt="">
 						</div>
 						<div class="speaker-body">
 							<div class="speaker-social">
@@ -427,8 +428,8 @@
 								<a href="#"><i class="fa fa fa-linkedin"></i></a>
 							</div>
 							<div class="speaker-content">
-								<h2>Dr. Gustavo Assi</h2>
-								<span>Professor, Doutor</span>
+								<h2>Gustavo Assi</h2>
+								<span>Professor, Doutor em Aeoronautics</span>
 							</div>
 						</div>
 					</div>
@@ -439,7 +440,7 @@
 				<div class="col-md-4 col-sm-6">
 					<div class="speaker" data-toggle="modal" data-target="#speaker-modal-2">
 						<div class="speaker-img">
-							<img src="./img/speaker02.jpg" alt="">
+							<img src="./img/palestrante02.png" alt="">
 						</div>
 						<div class="speaker-body">
 							<div class="speaker-social">
